RESOLVED FIXED161801
jsc.cpp should call initializeMainThread() to make sure that GC thread assertions work
https://bugs.webkit.org/show_bug.cgi?id=161801
Summary jsc.cpp should call initializeMainThread() to make sure that GC thread assert...
Filip Pizlo
Reported 2016-09-09 09:46:54 PDT
Patch forthcoming.
Attachments
the patch (1.35 KB, patch)
2016-09-09 09:48 PDT, Filip Pizlo
keith_miller: review+
Filip Pizlo
Comment 1 2016-09-09 09:48:19 PDT
Created attachment 288409 [details] the patch
Keith Miller
Comment 2 2016-09-09 09:51:01 PDT
Comment on attachment 288409 [details] the patch r=me.
Filip Pizlo
Comment 3 2016-09-09 14:22:26 PDT
Note You need to log in before you can comment on or make changes to this bug.